fix(ui): SummaryItem - prevent layout jump on loading

--- a/packages/ui/src/components/summary-item/summary-item.module.css
+++ b/packages/ui/src/components/summary-item/summary-item.module.css
@@ -21,9 +21,9 @@
 .delta {
   margin: 0;
   display: block;
-  min-height: var(--space-xsmall);
   font-size: var(--size-small);
   line-height: var(--space-small);
+  min-height: var(--space-xsmall);
 }
 
 .helpTooltip {
@@ -56,7 +56,15 @@
   text-decoration-style: dashed;
 }
 
+.showDelta .currentMetric {
+  min-height: calc(var(--space-medium) + var(--space-small));
+}
+
 /* Inline */
+.inline {
+  white-space: nowrap;
+}
+
 .inline .title {
   display: inline-block;
 }
@@ -65,6 +73,7 @@
   margin: 0 0 0 var(--space-xxsmall);
   display: inline-block;
   font-size: var(--size-small);
+  min-height: var(--space-small);
 }
 
 .inline .delta {
